; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/misc/extr_tls.c_msvcrt_free_tls_mem.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/misc/extr_tls.c_msvcrt_free_tls_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_4__*, %struct.TYPE_4__*, %struct.TYPE_4__*, %struct.TYPE_4__*, %struct.TYPE_4__*, %struct.TYPE_4__*, i32 }

@msvcrt_tls_index = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @msvcrt_free_tls_mem() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = load i32, i32* @msvcrt_tls_index, align 4
  %3 = call %struct.TYPE_4__* @TlsGetValue(i32 %2)
  store %struct.TYPE_4__* %3, %struct.TYPE_4__** %1, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %5 = icmp ne %struct.TYPE_4__* %4, null
  br i1 %5, label %6, label %41

6:                                                ; preds = %0
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 6
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @CloseHandle(i32 %9)
  %11 = call i32 (...) @GetProcessHeap()
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 5
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = call i32 @HeapFree(i32 %11, i32 0, %struct.TYPE_4__* %14)
  %16 = call i32 (...) @GetProcessHeap()
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %20 = call i32 @HeapFree(i32 %16, i32 0, %struct.TYPE_4__* %19)
  %21 = call i32 (...) @GetProcessHeap()
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 3
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %23, align 8
  %25 = call i32 @HeapFree(i32 %21, i32 0, %struct.TYPE_4__* %24)
  %26 = call i32 (...) @GetProcessHeap()
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 2
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %28, align 8
  %30 = call i32 @HeapFree(i32 %26, i32 0, %struct.TYPE_4__* %29)
  %31 = call i32 (...) @GetProcessHeap()
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 1
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %33, align 8
  %35 = call i32 @HeapFree(i32 %31, i32 0, %struct.TYPE_4__* %34)
  %36 = call i32 (...) @GetProcessHeap()
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 0
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %38, align 8
  %40 = call i32 @HeapFree(i32 %36, i32 0, %struct.TYPE_4__* %39)
  br label %41

41:                                               ; preds = %6, %0
  %42 = call i32 (...) @GetProcessHeap()
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %44 = call i32 @HeapFree(i32 %42, i32 0, %struct.TYPE_4__* %43)
  ret void
}

declare dso_local %struct.TYPE_4__* @TlsGetValue(i32) #1

declare dso_local i32 @CloseHandle(i32) #1

declare dso_local i32 @HeapFree(i32, i32, %struct.TYPE_4__*) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
